<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">


    <EditText

        android:id="@+id/etNum1"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="233dp"
        android:ems="10"
        android:hint="@string/e_g_1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="172dp"
        android:layout_marginBottom="476dp"
        android:background="#8BC34A"
        android:text="@string/equals"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/etNum2"
        android:layout_width="144dp"
        android:layout_height="50dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="7dp"
        android:ems="10"
        android:hint="@string/e_g_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toEndOf="@+id/etNum1"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="398dp"
        android:background="#B5B2B2"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="398dp"
        android:background="#B5B2B2"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="398dp"
        android:background="#B5B2B2"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="42dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="398dp"
        android:background="#B5B2B2"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView3" />

    <TextView
        android:id="@+id/addition"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginStart="44dp"
        android:layout_marginBottom="332dp"
        android:text="@string/addition"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/subtraction"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="332dp"
        android:text="@string/subtraction"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addition" />

    <TextView
        android:id="@+id/multiplication"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="332dp"
        android:text="@string/multiplication"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/subtraction" />

    <TextView
        android:id="@+id/division"
        android:layout_width="65dp"
        android:layout_height="66dp"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="332dp"
        android:text="@string/division"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/multiplication" />

</androidx.constraintlayout.widget.ConstraintLayout>